# torchdrug

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
experiments/: __init__.py  molecules_step_evo.py  molecules_step_evo_fine.py
experiments/configs/: default_config.yaml
experiments/wandb/: latest-run
experiments/wandb/run-20220719_210530-23rjy7sf/: run-23rjy7sf.wandb
experiments/wandb/run-20220719_210530-23rjy7sf/files/: wandb-metadata.json  wandb-summary.json
experiments/wandb/run-20220719_230638-1tn3nhu0/: run-1tn3nhu0.wandb
experiments/wandb/run-20220719_230638-1tn3nhu0/files/: wandb-metadata.json
experiments/wandb/run-20220719_230931-3tom4nnx/: run-3tom4nnx.wandb
experiments/wandb/run-20220719_230931-3tom4nnx/files/: config.yaml  wandb-metadata.json
experiments/wandb/run-20220719_234120-1qhvlzlq/: run-1qhvlzlq.wandb
experiments/wandb/run-20220719_234120-1qhvlzlq/files/: config.yaml  wandb-metadata.json
experiments/wandb/run-20220719_234732-4tp48lt2/: run-4tp48lt2.wandb
experiments/wandb/run-20220719_234732-4tp48lt2/files/: config.yaml  wandb-metadata.json
torchdrug/: molecules_step_evo_fine.py
torchdrug/data/: graph.py  molecule.py
torchdrug/datasets/: zinc250k.py
torchdrug/experiments/: molecules_step_evo.py
torchdrug/experiments/wandb/: latest-run
torchdrug/tasks/: generation.py
wandb/: latest-run
wandb/run-20220719_232517-2qemj31p/: run-2qemj31p.wandb
wandb/run-20220719_232517-2qemj31p/files/: config.yaml  wandb-metadata.json
(+3 files in other folders)
