[tool.poetry]
name = "torchdrug"
version = "0.1.0"
description = ""
authors = ["João Brás Simões <joaosbraz@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
torch = [
    {url = "https://download.pytorch.org/whl/cpu/torch-1.11.0-cp38-none-macosx_10_9_x86_64.whl", markers = "sys_platform == 'darwin'"},
    {url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp38-cp38-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
torch-scatter = [
    {url = "https://data.pyg.org/whl/torch-1.11.0%2Bcpu/torch_scatter-2.0.9-cp38-cp38-macosx_10_15_x86_64.whl", markers = "sys_platform == 'darwin'"},
    {url = "https://data.pyg.org/whl/torch-1.11.0%2Bcu113/torch_scatter-2.0.9-cp38-cp38-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
]
jupyter = "^1.0.0"
notebook = "^6.4.12"
wandb = "^0.12.20"
Pillow = "=9.1.1"
rdkit-pypi = "*"
networkx = "*"
matplotlib = "*"
tqdm = "*"
ninja = "*"
jinja2 = "*"
hydra-core = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
